test/files/neg/t3115d/test_2.scala
// scalac: -Xlint -Werror

package q {
  class Test {
    def f = new p.C
  }
}
